--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "numpy==2.3.2",
     "openai==1.99.9",
+    "pydantic>=2.11.7",
+    "pydantic-settings>=2.10.1",
     "python-dotenv==1.1.1",
     "sentence-transformers==5.1.0",
     "torch==2.8.0",
